--- a/nb/027_create_dataset.ipynb
+++ b/nb/027_create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "576104cb",
+   "id": "ab35e9ab",
    "metadata": {},
    "source": [
     "# Overview\n",
@@ -12,14 +12,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dd2d3206",
+   "id": "2b720832",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "af355ac\n"
+      "defd4f0\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05727a1e",
+   "id": "3d87361b",
    "metadata": {},
    "source": [
     "# Const"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41c8a884",
+   "id": "d48683c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc1cadb",
+   "id": "16a7500e",
    "metadata": {},
    "source": [
     "# Import everything I need:)"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a04c5bd",
+   "id": "8ed4e289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9881074",
+   "id": "914e1c6b",
    "metadata": {},
    "source": [
     "# Function"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fe4bdba4",
+   "id": "307fd189",
    "metadata": {
     "executionInfo": {
      "elapsed": 4655,
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "06ed890c",
+   "id": "30af4c0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6489a158",
+   "id": "709c5bb6",
    "metadata": {},
    "source": [
     "# Preparation"
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aabd7bef",
+   "id": "2d2dc234",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6e53279",
+   "id": "7772af81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60222cdf",
+   "id": "706a04ce",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4ab255ea",
+   "id": "058698a2",
    "metadata": {
     "executionInfo": {
      "elapsed": 12440,
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f74f8de",
+   "id": "4b204685",
    "metadata": {},
    "source": [
     "# EDA"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7bf9c10f",
+   "id": "c1e002c0",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f9096b",
+   "id": "0cda5eeb",
    "metadata": {},
    "source": [
     "# 質の良いbssidを選定\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2702de6b",
+   "id": "c8905b1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,15 +425,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "25f8dbad",
+   "id": "6fd4e2e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35.7 s, sys: 2.71 s, total: 38.4 s\n",
-      "Wall time: 39.3 s\n"
+      "CPU times: user 53.7 s, sys: 7.72 s, total: 1min 1s\n",
+      "Wall time: 2min 6s\n"
      ]
     }
    ],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a25f8d",
+   "id": "30816340",
    "metadata": {},
    "source": [
     "# Dataseet 作成\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8acb20cd",
+   "id": "6c270c91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ff9c4df5",
+   "id": "038d9bbf",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a244a06d",
+   "id": "0d39b022",
    "metadata": {
     "papermill": {
      "duration": 0.021272,
@@ -637,8 +637,8 @@
       "4413\n",
       "5dc8cea7659e181adb076a3f\n",
       "4443\n",
-      "CPU times: user 3min 42s, sys: 11.2 s, total: 3min 53s\n",
-      "Wall time: 3min 58s\n"
+      "CPU times: user 5min 9s, sys: 30.6 s, total: 5min 40s\n",
+      "Wall time: 11min 11s\n"
      ]
     }
    ],
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "27dcbc58",
+   "id": "5a162cd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8de709f6",
+   "id": "2cb1dfb8",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='626' class='' max='626' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [626/626 00:33<00:00]\n",
+       "      100.00% [626/626 01:27<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7ab0f0e3",
+   "id": "3b97d75b",
    "metadata": {},
    "outputs": [
     {
@@ -788,31 +788,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29c7d9e757292e7b2b3d00dc4dae7514531b20b4</td>\n",
+       "      <td>bd400fbef9b9b15143e93f8ad2efb07c076e2f5b</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>c83a81634993ed9d129ca0176cdd01ccc9a8788d</td>\n",
+       "      <td>11567178cc5ca582a37c4733207c77739e1bf5fd</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ddf350d0ccf75a6e540a00adbc7de2a02f093fd4</td>\n",
+       "      <td>b24fb7ab35b6fb9be0fcc76a4922b90634f5deb9</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ec05e28fdb4d2aba0dcdd7dc7e4ec1e3501c9293</td>\n",
+       "      <td>29c7d9e757292e7b2b3d00dc4dae7514531b20b4</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>b24fb7ab35b6fb9be0fcc76a4922b90634f5deb9</td>\n",
+       "      <td>889bfa434d66eed8c386ccbc90f445932c43f8dd</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
@@ -822,11 +822,11 @@
       ],
       "text/plain": [
        "                                      bssid  count                   site_id\n",
-       "0  29c7d9e757292e7b2b3d00dc4dae7514531b20b4     46  5da1389e4db8ce0c98bd0547\n",
-       "1  c83a81634993ed9d129ca0176cdd01ccc9a8788d     46  5da1389e4db8ce0c98bd0547\n",
-       "2  ddf350d0ccf75a6e540a00adbc7de2a02f093fd4     46  5da1389e4db8ce0c98bd0547\n",
-       "3  ec05e28fdb4d2aba0dcdd7dc7e4ec1e3501c9293     46  5da1389e4db8ce0c98bd0547\n",
-       "4  b24fb7ab35b6fb9be0fcc76a4922b90634f5deb9     46  5da1389e4db8ce0c98bd0547"
+       "0  bd400fbef9b9b15143e93f8ad2efb07c076e2f5b     46  5da1389e4db8ce0c98bd0547\n",
+       "1  11567178cc5ca582a37c4733207c77739e1bf5fd     46  5da1389e4db8ce0c98bd0547\n",
+       "2  b24fb7ab35b6fb9be0fcc76a4922b90634f5deb9     46  5da1389e4db8ce0c98bd0547\n",
+       "3  29c7d9e757292e7b2b3d00dc4dae7514531b20b4     46  5da1389e4db8ce0c98bd0547\n",
+       "4  889bfa434d66eed8c386ccbc90f445932c43f8dd     46  5da1389e4db8ce0c98bd0547"
       ]
      },
      "execution_count": 16,
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9a85527a",
+   "id": "b56857b2",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a9f06ef",
+   "id": "539d773c",
    "metadata": {},
    "source": [
     "## train作成"
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a8c6dd2e",
+   "id": "fe3678e2",
    "metadata": {
     "papermill": {
      "duration": 0.026514,
@@ -981,7 +981,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='24' class='' max='24' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [24/24 18:38<00:00]\n",
+       "      100.00% [24/24 31:21<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8d6709e7",
+   "id": "6f9eb575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaac1f4c",
+   "id": "e26d31b8",
    "metadata": {},
    "source": [
     "## test作成"
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e3e807e6",
+   "id": "c43b454a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7f1cfe9e",
+   "id": "d7bd14d7",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b7712c85",
+   "id": "97824864",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='626' class='' max='626' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [626/626 01:40<00:00]\n",
+       "      100.00% [626/626 03:05<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "72cd0b2c",
+   "id": "97c55411",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "71367d96",
+   "id": "442c7173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3f746eab",
+   "id": "889a2d4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6d2c0a54",
+   "id": "11e32208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1464,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "978bbe1e",
+   "id": "cf064d99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1472,14 +1472,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cdb9c32",
+   "id": "b7f8d27b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "ea7c73b7",
+   "id": "1ee6d45a",
    "metadata": {},
    "source": [
     "\n",
