--- a/nb/027_create_dataset.ipynb
+++ b/nb/027_create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ab35e9ab",
+   "id": "2cc30322",
    "metadata": {},
    "source": [
     "# Overview\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b720832",
+   "id": "80c5de21",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d87361b",
+   "id": "44d49efa",
    "metadata": {},
    "source": [
     "# Const"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d48683c4",
+   "id": "45005494",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a7500e",
+   "id": "d89ff92c",
    "metadata": {},
    "source": [
     "# Import everything I need:)"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ed4e289",
+   "id": "3b66faaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914e1c6b",
+   "id": "58c876cc",
    "metadata": {},
    "source": [
     "# Function"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "307fd189",
+   "id": "8c66adc2",
    "metadata": {
     "executionInfo": {
      "elapsed": 4655,
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "30af4c0d",
+   "id": "5001e6ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "709c5bb6",
+   "id": "05cdc7eb",
    "metadata": {},
    "source": [
     "# Preparation"
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2dc234",
+   "id": "3d3ad7a8",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7772af81",
+   "id": "ca7975a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706a04ce",
+   "id": "47073eb5",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "058698a2",
+   "id": "a225aca9",
    "metadata": {
     "executionInfo": {
      "elapsed": 12440,
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b204685",
+   "id": "359fb0df",
    "metadata": {},
    "source": [
     "# EDA"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1e002c0",
+   "id": "d0d05e8a",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cda5eeb",
+   "id": "c3df760d",
    "metadata": {},
    "source": [
     "# 質の良いbssidを選定\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c8905b1a",
+   "id": "26a2ed67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6fd4e2e1",
+   "id": "86059bfc",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30816340",
+   "id": "3f326908",
    "metadata": {},
    "source": [
     "# Dataseet 作成\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6c270c91",
+   "id": "d30e07df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "038d9bbf",
+   "id": "032111e3",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0d39b022",
+   "id": "bda9308f",
    "metadata": {
     "papermill": {
      "duration": 0.021272,
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5a162cd8",
+   "id": "a984f262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2cb1dfb8",
+   "id": "6f226420",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3b97d75b",
+   "id": "b5081d41",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b56857b2",
+   "id": "403dbdcd",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539d773c",
+   "id": "808e2175",
    "metadata": {},
    "source": [
     "## train作成"
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fe3678e2",
+   "id": "a4e8414a",
    "metadata": {
     "papermill": {
      "duration": 0.026514,
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6f9eb575",
+   "id": "dc35d889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26d31b8",
+   "id": "459dc0fa",
    "metadata": {},
    "source": [
     "## test作成"
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c43b454a",
+   "id": "f03f22e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d7bd14d7",
+   "id": "e43ae567",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "97824864",
+   "id": "dcb57d5a",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "97c55411",
+   "id": "79f14c27",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "442c7173",
+   "id": "5e1590f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "889a2d4a",
+   "id": "b0d9d067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,18 +1453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "11e32208",
+   "execution_count": null,
+   "id": "856f2a56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.to_csv(f'{DIR_SAVE_IGNORE}test_n_bixed_bssid_{N_BSSID}.csv', index=False)"
+    "test_df.to_csv(f'{DIR_SAVE_IGNORE}test_n_bixed_bssid_{N_BSSID}.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf064d99",
+   "id": "dcd3b90e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1472,14 +1472,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f8d27b",
+   "id": "9a24778e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "1ee6d45a",
+   "id": "b86180f0",
    "metadata": {},
    "source": [
     "\n",
